Refine email marketing workflows and reporting